--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,12 +20,24 @@
 
 html,
 body {
-  max-width: 100vw;
+  /* max-width: 100vw;
   max-height: 100vh;
+  overflow-x: hidden; */
+  width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
 }
 
+#__next {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   color: var(--foreground);
   background: var(--background);
   font-family: 'Pretendard', sans-serif;
